--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=9000 react-scripts start",
     "start:backend": "cd ../backend && npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
