--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -4,6 +4,8 @@ tunnels:
   frontend:
     proto: http
     addr: 9000
+    hostname: s3-file-browser-frontend.ngrok.io
   backend:
     proto: http
     addr: 3000
+    hostname: s3-file-browser-backend.ngrok.io
