--- a/copilot/ngrok/manifest.yml
+++ b/copilot/ngrok/manifest.yml
@@ -22,6 +22,9 @@ exec: true     # Enable running commands in your container.
 network:
   connect: true # Enable Service Connect for intra-environment traffic between services.
 
+deployment:
+  rolling: 'recreate'
+
 # storage:
   # readonly_fs: true       # Limit to read-only access to mounted root filesystems.
 
