--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,16 @@ FROM node:14
 WORKDIR /app
 
 COPY package.json .
-COPY public/env.prod.js public/env.js
 
 RUN npm install
 
 COPY . .
+
+RUN echo -e '\
+window.env = {
+  API_URL: \'https://s3-file-browser-frontend.ngrok.io\'',
+  API_PORT: '443',
+};
+> public/env.js
 
 CMD ["npm", "start"]
