--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -3,9 +3,9 @@ region: "us"
 tunnels:
   frontend:
     proto: http
-    addr: 9000
+    addr: frontend.prod.s3-file-browser-ngrok.local:9000
     hostname: s3-file-browser-frontend.ngrok.io
   backend:
     proto: http
-    addr: 3000
+    addr: backend.prod.s3-file-browser-ngrok.local:3000
     hostname: s3-file-browser-backend.ngrok.io
