--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ package-lock.json
 # dotenv environment variables file
 .env
 .env.test
+config.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -103,3 +104,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VIM temp file
+*~*
+*.swp
