--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "s3-file-browser-ngrok",
+  "name": "S3 File Browser with ngrok",
   "icons": [
     {
       "src": "favicon.ico",
