Updated to make work in cloud

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,11 +8,9 @@ RUN npm install
 
 COPY . .
 
-RUN echo -e '\
-window.env = {
-  API_URL: \'https://s3-file-browser-frontend.ngrok.io\'',
-  API_PORT: '443',
-};
-> public/env.js
+RUN echo "window.env = {" > public/env.js &&  \
+  echo "  API_URL: 'https://s3-file-browser-backend.ngrok.io'," >> public/env.js && \
+  echo "  API_PORT: '443'" >> public/env.js && \
+  echo "};" >> public/env.js
 
 CMD ["npm", "start"]
